Fixed for v0.5.1 and tweaked the preview/source padding

--- a/obsidian.css
+++ b/obsidian.css
@@ -1,16 +1,10 @@
-/* Custom font */
-/* Comment this out if you don't have iA Writer Duospace installed */
-.cm-s-obsidian {
-  font-family: 'iAWriterDuospace-Regular', 'iA Writer Duospace', 'Source Code Pro', 'Microsoft YaHei Light', monospace;
-}
-
 /* Collapsing sidedocks */
 .app-container.is-left-sidedock-collapsed .side-dock.mod-left:not(:hover), .app-container.is-right-sidedock-collapsed .side-dock.mod-right:not(:hover) {
   width: 0px !important;
 }
 
 /* Clean header */
-.workspace-leaf-header {
+.workspace-leaf-header, .view-header {
   background-color: var(--background-primary) !important;
   border-bottom: 0px !important;
 }
@@ -29,12 +23,20 @@
   color: var(--text-normal);
 }
 
+/* Bigger margins when single pane */
+.mod-single-child .CodeMirror-sizer {
+  margin: 0px 10% !important;
+}
+.mod-single-child .markdown-preview-section {
+  margin: 0px 10% !important;
+}
+
 
 /* Markdown syntax highlighting */
 /* Headers */
 .cm-formatting-header {
   color: var(--text-faint) !important;
-  font-weight: 200 !important;
+  font-weight: 400 !important;
 }
 .HyperMD-header-1 {
   font-size: 18pt !important;
@@ -55,11 +57,23 @@
 }
 
 
+/* Markdown preview styling */
+/* Blockquotes */
+.markdown-preview-view blockquote {
+  border-radius: 4px;
+  border: solid var(--quote-opening-modifier);
+  border-width: 0px 0px 0px 7px;
+  background-color: var(--background-modifier-accent);
+}
+
+
 /* --------------- */
 /* Custom colors */
 .theme-dark {
   --background-primary: #000;
   --background-secondary: #000;
+  --background-modifier-accent: #94a8b328;
+  --quote-opening-modifier: rgb(255, 255, 255, 0.1);
 
   --text-normal: #dedcde;
   --text-accent:  #94a8b3;
@@ -67,6 +81,9 @@
 }
 
 .theme-light {
+  --background-modifier-accent: #6b8c9c1e;
+  --quote-opening-modifier: rgb(0, 0, 0, 0.1);
+
   --text-accent:  #6b8c9c;
   --text-accent-hover: #81a7b9;
 }
