--- a/obsidian.css
+++ b/obsidian.css
@@ -98,6 +98,46 @@ a.internal-link:hover {
 .cm-formatting-quote {
   color: var(--text-faint) !important;
 }
+/* Tags (pill style, borrowed from kepano/obsidian-minimal) */
+.tag {
+  background-color:var(--background-modifier-accent);
+  border:none;
+  color:var(--text-muted);
+  padding:1px 7px;
+  text-align:center;
+  text-decoration:none;
+  display:inline-block;
+  margin:4px 0px 0px;
+  cursor:pointer;
+  border-radius:10px;
+}
+.tag:hover {
+  color:var(--text-muted);
+  background-color:var(--background-modifier-border);
+}
+.cm-s-obsidian span.cm-hashtag {
+  background-color:var(--background-modifier-accent);
+  border:none;
+  color:var(--text-muted);
+  text-align:center;
+  text-decoration:none;
+  display:inline-block;
+  margin:0;
+  vertical-align:middle;
+  padding-top:1px;
+  padding-bottom:1px;
+  cursor:text;
+}
+.cm-hashtag-begin {
+  border-top-left-radius:10px;
+  border-bottom-left-radius:10px;
+  padding-left:7px;
+}
+.cm-hashtag-end {
+  border-top-right-radius:10px;
+  border-bottom-right-radius:10px;
+  padding-right:7px;
+}
 
 
 /* Markdown preview styling */
