--- a/obsidian.css
+++ b/obsidian.css
@@ -27,6 +27,96 @@
   --text-accent:  #6b8c9c;
   --text-accent-hover: #81a7b9;
 }
+/* Fonts and text (thanks to @kepano for this minimal alteration of the defaults */
+/* ----------------------------------------------------------------------------- */
+:root {
+  --default-font:IBM Plex Sans,-apple-system,BlinkMacSystemFont,sans-serif;
+}
+
+--font-normal:14px;
+--font-small:12px;
+--font-smaller:10px;
+
+--normal-weight:400;  /* Switch to 300 if you want thinner default text */
+--bold-weight:500;    /* Switch to 600 or 700 if you want thicker bold text */
+
+::selection { background:var(--text-selection); }
+
+h1,h2,h3,h4,h5,strong {font-weight:var(--bold-weight);}
+h1,h2,h3,h4 {letter-spacing:-0.02em;} 
+
+body, input, button, .cm-s-obsidian .cm-formatting-hashtag, .cm-s-obsidian {
+  letter-spacing:0.02rem;
+  font-size:var(--font-normal);
+  font-weight:var(--normal-weight);
+  -webkit-font-smoothing:subpixel-antialiased !important;
+}
+.cm-s-obsidian .cm-header, .cm-s-obsidian .cm-strong {
+  font-weight:var(--bold-weight);
+}
+.cm-formatting-header {
+  color:var(--text-faint) !important;
+  font-weight:var(--normal-weight) !important;
+}
+.file-embed-title,
+.markdown-embed-title {
+  letter-spacing:-0.02em;
+  text-align:left;
+  font-size:20px;
+  font-weight:var(--bold-weight);
+}
+.empty-state-title,
+.markdown-preview-view h1,
+.HyperMD-header-1,
+.cm-header-1 {
+  letter-spacing:-0.02em;
+  font-size:28px !important;
+  font-weight:var(--bold-weight) !important;
+}
+.markdown-preview-view h2,
+.HyperMD-header-2,
+.cm-header-2 {
+  letter-spacing:-0.02em;
+  font-size:22px !important;
+  font-weight:var(--bold-weight) !important;
+}
+.markdown-preview-view h3,
+.HyperMD-header-3,
+.cm-header-3 {
+  letter-spacing:-0em;
+  font-weight:var(--bold-weight) !important;
+  font-size:18px !important;
+}
+.markdown-preview-view h4,
+.HyperMD-header-4,
+.cm-header-4 {
+  font-variant:small-caps;
+  text-transform:lowercase;
+  letter-spacing:0.05em;
+  color:var(--text-normal);
+  font-weight:var(--normal-weight) !important;
+  font-size:18px !important;
+}
+.markdown-preview-view h5,
+.HyperMD-header-5,
+.cm-header-5 {
+  font-variant:small-caps;
+  text-transform:lowercase;
+  letter-spacing:0.05em;
+  color:var(--text-normal);
+  font-weight:300 !important;
+  font-size:16px !important;
+}
+.markdown-preview-view h6,
+.HyperMD-header-6,
+.cm-header-6 {
+  font-variant:small-caps;
+  text-transform:lowercase;
+  letter-spacing:0.1em;
+  color:var(--text-muted);
+  font-weight:300 !important;
+  font-size:14px !important;
+}
 
 /* Other variables */
 /* --------------- */
@@ -72,15 +162,6 @@ html, body {
 .status-bar {
   background-color: var(--background-primary);
   color: var(--text-faint);
-}
-
-/* Bigger margins when single pane */
-/* I think this is rendered redundant with the current version */
-.mod-single-child .CodeMirror-sizer {
-  margin: 0px 10% !important;
-}
-.mod-single-child .markdown-preview-section {
-  margin: 0px 10% !important;
 }
 
 /* Pretty link hover animations */
