--- a/obsidian.css
+++ b/obsidian.css
@@ -1,44 +1,64 @@
 /* Custom colors */
 /* ------------- */
-.theme-dark {
-  --background-primary: #000;
-  --background-secondary: #000;
-  --background-modifier-accent: #94a8b328;
-  --quote-opening-modifier: rgb(255, 255, 255, 0.1);
+:root {
+  /* Base color */
+  --base-h: 200;
+  --base-s: 50%;
+  --base-l: 50%;
+}
 
+.theme-dark, .theme-light {
   /* Text */
-  --text: 222, 220, 222;
   --text-normal: rgb(var(--text));
   --text-faint: rgba(var(--text), 0.3);
 
   /* Accent */
-  --accent: 148, 168, 179;
-  --text-accent: rgb(var(--accent));
-  --text-accent-hover: rgba(var(--accent), 0.8);
-  --interactive-accent: rgba(var(--accent), 0.6);
-  --interactive-accent-rgb: var(--accent);
-  --interactive-accent-hover: rgba(var(--accent), 0.5);
+  --text-accent: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) + 20%));
+  --text-accent-hover: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) + 20%), 0.8);
+  --interactive-accent: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) + 20%), 0.6);
+  --interactive-accent-hover: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) + 20%), 0.5);
+
+  /* Other */
+  --background-modifier-accent: hsla(var(--base-h),var(--base-s), var(--base-l), 0.3);
+  --quote-opening-modifier: rgb(var(--text), 0.1);
+}
+
+.theme-dark {
+  --text: 222, 220, 222;
+  --background-primary: hsl(var(--base-h),var(--base-s),calc(var(--base-l) - 50%));
+  --background-secondary: hsl(var(--base-h),var(--base-s),calc(var(--base-l) - 45%));
+
+  /* Accent */
+  --text-accent: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) + 20%));
+  --text-accent-hover: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) + 20%), 0.8);
+  --interactive-accent: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) + 20%), 0.6);
+  --interactive-accent-hover: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) + 20%), 0.5);
 }
 
 .theme-light {
-  --background-modifier-accent: #6b8c9c1e;
-  --quote-opening-modifier: rgb(0, 0, 0, 0.1);
+  --text: 23, 23, 23;
+  --background-primary: hsl(var(--base-h),var(--base-s),calc(var(--base-l) + 50%));
+  --background-secondary: hsl(var(--base-h),var(--base-s),calc(var(--base-l) + 45%));
 
-  --text-accent:  #6b8c9c;
-  --text-accent-hover: #81a7b9;
+  /* Accent */
+  --text-accent: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) - 20%));
+  --text-accent-hover: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) - 20%), 0.8);
+  --interactive-accent: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) - 20%), 0.6);
+  --interactive-accent-hover: hsl(var(--base-h), calc(var(--base-s) - 30%), calc(var(--base-l) - 20%), 0.5);
 }
+
 /* Fonts and text (thanks to @kepano for this minimal alteration of the defaults */
 /* ----------------------------------------------------------------------------- */
 :root {
   --default-font:IBM Plex Sans,-apple-system,BlinkMacSystemFont,sans-serif;
+
+  --font-normal:14px;
+  --font-small:12px;
+  --font-smaller:10px;
+
+  --normal-weight:400;  /* Switch to 300 if you want thinner default text */
+  --bold-weight:500;    /* Switch to 600 or 700 if you want thicker bold text */
 }
-
---font-normal:14px;
---font-small:12px;
---font-smaller:10px;
-
---normal-weight:400;  /* Switch to 300 if you want thinner default text */
---bold-weight:500;    /* Switch to 600 or 700 if you want thicker bold text */
 
 ::selection { background:var(--text-selection); }
 
