--- a/obsidian.css
+++ b/obsidian.css
@@ -49,7 +49,7 @@ body, input, button, .cm-s-obsidian .cm-formatting-hashtag, .cm-s-obsidian {
 .cm-s-obsidian .cm-header, .cm-s-obsidian .cm-strong {
   font-weight:var(--bold-weight);
 }
-.cm-formatting-heajer {
+.cm-formatting-header {
   color:var(--text-faint) !important;
   font-weight:var(--normal-weight) !important;
 }
